--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,10 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: any
   flutter_bloc: any
   connectivity_plus: any
+  equatable: any
 
 dev_dependencies:
   flutter_test:
